@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+    New features:
+    * ->encode and ->decode with a few basic transcoders
 
 0.008     2017-03-03 23:03:06+08:00 Asia/Kuala_Lumpur
     Bug fixes:
